brunel/out/brunel_580095.err
  File "/home/d.mingers/diverses/brunel/brunel_exp_blau3.py", line 63
    g_1 = parspace[ int(sys.argv[ 2 ]) ]  # 250.0
      ^
SyntaxError: invalid syntax
  File "/home/d.mingers/diverses/brunel/brunel_exp_blau3.py", line 63
    g_1 = parspace[ int(sys.argv[ 2 ]) ]  # 250.0
      ^
SyntaxError: invalid syntax
  File "/home/d.mingers/diverses/brunel/brunel_exp_blau3.py", line 63
    g_1 = parspace[ int(sys.argv[ 2 ]) ]  # 250.0
      ^
SyntaxError: invalid syntax
  File "/home/d.mingers/diverses/brunel/brunel_exp_blau3.py", line 63
    g_1 = parspace[ int(sys.argv[ 2 ]) ]  # 250.0
      ^
SyntaxError: invalid syntax
  File "/home/d.mingers/diverses/brunel/brunel_exp_blau3.py", line 63
    g_1 = parspace[ int(sys.argv[ 2 ]) ]  # 250.0
      ^
SyntaxError: invalid syntax
